# react-native-nacl-jsi

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  libsodium-1.0.18-stable.tar.gz.minisig  package.json  react-native-nacl-jsi.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/gradle/wrapper/: gradle-wrapper.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/reactnativenacljsi/: NaclJsiModule.java  NaclJsiPackage.java
cpp/: aes.cpp  aes.h  argon2id.cpp  argon2id.h  box.cpp  box.h  constants.cpp  constants.h  encoding.cpp  encoding.h  helpers.cpp  helpers.h  random.cpp  random.h  react-native-nacl-jsi.cpp  react-native-nacl-jsi.h  secretbox.cpp  secretbox.h  sign.cpp  sign.h  utils.cpp  utils.h
example/: Gemfile  package.json  react-native.config.js
example/android/: build.gradle  settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/java/com/example/reactnativenacljsi/: ReactNativeFlipper.java
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/example/reactnativenacljsi/: MainActivity.java  MainActivity.kt  MainApplication.java  MainApplication.kt
example/android/app/src/main/java/com/example/reactnativenacljsi/newarchitecture/: MainApplicationReactNativeHost.java
example/android/app/src/main/java/com/example/reactnativenacljsi/newarchitecture/components/: MainComponentsRegistry.java
example/android/app/src/main/java/com/example/reactnativenacljsi/newarchitecture/modules/: MainApplicationTurboModuleManagerDelegate.java
example/android/app/src/main/jni/: MainApplicationTurboModuleManagerDelegate.h  MainComponentsRegistry.h
example/android/app/src/main/res/values/: strings.xml
example/android/gradle/wrapper/: gradle-wrapper.properties
example/ios/: File.swift  Podfile
example/ios/NaclJsiExample/: AppDelegate.h  AppDelegate.mm  LaunchScreen.storyboard
example/ios/NaclJsiExample.xcodeproj/: project.pbxproj
example/ios/NaclJsiExample.xcodeproj/xcshareddata/xcschemes/: NaclJsiExample.xcscheme
example/ios/NaclJsiExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
ios/: NaclJsi.h  NaclJsi.mm
ios/NaclJsi.xcodeproj/: project.pbxproj
libsodium/: build.sh  libsodium-1.0.19.tar.gz.minisig
src/: index.ts  index.tsx  nacl.ts  nacl.web.ts  types.ts
